...


  <string name="submit">Submit</string>
  <string name="reset_password">Reset Password</string>
  <string name="search">Search&#8230;</string>
  <string name="OK">OK</string>
  <string name="settings">Settings</string>
  <string name="password_format_wrong">Password between 8 - 15 characters. Must contain at least 1 upper, 1 lower case letter, and a number</string>
  <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
  <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.
    </string>
  <string name="please_wait_dialog_message">Please wait…</string>
...
  <string name="profile_tab_title">Profile</string>
  <string name="sign_out">Sign out</string>
  <string name="signing_out_dialog_title">Signing Out</string>

  <!-- LOGIN ACTIVITY -->
  <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
  <string name="sign_in_button">Sign In</string>
  <string name="sign_up_button">Sign Up</string>
  <string name="already_signed_up">Already a user? Sign in</string>

  <!-- SIGN UP ACTIVITY -->
  <string name="sign_up_activity_title">Sign Up</string>
  <string name="field_empty_error_message">Can\'t be empty</string>
...
  <string name="forgot_password_button">&lt;u>Forgot Password?&lt;u></string>
  <string name="signing_in_dialog_title">Logging in</string>
  <string name="error_occurred_dialog_title">An Error Occurred</string>
  <string name="login_failed_wrong_credentials">Wrong email and password combination, please try again.</string>
  <string name="error_email_address_not_valid">The email address you entered is not valid. Please try again.</string>
  <string name="fill_in_credentials_to_sign_in">Please fill in your email and password</string>
  <string name="show_password">Show</string>
  <string name="hide_password">Hide</string>

  <!-- FORGOT PASSWORD ACTIVITY -->
  <string name="forgot_password_activity_title">Forgot Password</string>
  <string name="forgot_password_reset_hint">Please enter your email address below. We will send you instructions to reset your password.</string>

  <!-- RESET PASSWORD ACTIVITY -->
...
