...
      android:paddingBottom="@dimen/default_margin_2"
      android:paddingTop="@dimen/default_margin_2"
      android:textColor="@android:color/white"
      />

  <LinearLayout
      android:id="@+id/signInButtonsLayout"
      android:layout_width="match_parent"
      android:layout_height="@dimen/radiobutton_row_height"
      android:layout_alignParentBottom="true"
      android:background="@android:color/white"
      android:orientation="horizontal"
      >

    <Button
        android:id="@+id/signInBTN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/lighter_gray"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in_button"
...
