...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <RelativeLayout
      android:id="@+id/userPictureAndNameLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <LinearLayout
        android:id="@+id/userProfileBasicInfoLayout"
...
            android:layout_height="0.5dp"
            android:background="@color/offwhite_background_gray"
            />
      </LinearLayout>

      <Button
          android:id="@+id/logoutBTN"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/default_margin_2"
          android:layout_marginEnd="@dimen/default_margin_2"
          android:layout_marginStart="@dimen/default_margin_2"
          android:layout_marginTop="@dimen/default_margin_3"
...
