...
            app:testErrorString="@string/password_format_wrong"
            validator:emptyErrorString="@string/password_empty_error"
            />
        <!--app:testType="regexp"-->

        <TextView
            android:id="@+id/showPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/default_margin_2"
            android:text="@string/show_password"
...
