...
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      >

    <RelativeLayout
        android:id="@+id/chartHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/chart_title_headline_bar_height"
        android:background="@color/health_green"
        >

      <TextView
...
